[gd_scene load_steps=3 format=3 uid="uid://bu814wsj38k0s"]

[ext_resource type="Script" path="res://hud.gd" id="1_6jub5"]
[ext_resource type="FontFile" uid="uid://n246ayxytvdd" path="res://font/LuckiestGuy-Regular.ttf" id="2_upekl"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_6jub5")

[node name="Title" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -70.0
offset_right = 108.5
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_upekl")
theme_override_font_sizes/font_size = 48
text = "Malicious
Moles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -100.0
offset_right = 50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.796078, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0.137255, 0.137255, 0.137255, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.160784, 0.160784, 0.160784, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_upekl")
theme_override_font_sizes/font_size = 24
text = "START"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 8.0
offset_top = 20.0
offset_right = 64.0
offset_bottom = 46.0
theme_override_fonts/font = ExtResource("2_upekl")
text = "SCORE:"

[node name="ScoreValue" type="Label" parent="."]
offset_left = 72.0
offset_top = 20.0
offset_right = 112.0
offset_bottom = 46.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_upekl")
text = "000000"

[node name="ShameLabel" type="Label" parent="."]
offset_left = 472.0
offset_top = 20.0
offset_right = 532.0
offset_bottom = 46.0
theme_override_fonts/font = ExtResource("2_upekl")
text = "SHAME:"

[node name="ShameBar" type="ProgressBar" parent="."]
offset_left = 552.0
offset_top = 8.0
offset_right = 792.0
offset_bottom = 48.0
max_value = 10.0
step = 1.0
show_percentage = false

[node name="ContinueButton" type="Button" parent="."]
process_mode = 2
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_upekl")
theme_override_font_sizes/font_size = 24
text = "CONTINUE"

[node name="CreditsLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -230.0
offset_right = 129.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_upekl")
text = "written by: rolika
sound effects: kenney.nl
font: Luckiest Guy (Google Fonts)"
horizontal_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
